# pmake

./: .gitignore  .pmake-project  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py  configure.py  install.py  vcpkg-configuration.json  vcpkg.json
assets/templates/: pmake-info.json
assets/templates/common/: CMakeLists.txt  CMakePresets.json  build.py
assets/templates/common/cmake/: get_cpm.cmake
assets/templates/features/installable/cmake/: !PROJECT!Config.cmake
assets/templates/features/testable/cmake/: enable_tests.cmake
cmake/: enable_vcpkg.cmake  get_cpm.cmake  remote_clone.cmake  static_analyzers.cmake
cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
pmake/: CMakeLists.txt
pmake-templates/: pmake-info.json
pmake-templates/common/: .gitignore  CMakeLists.txt  CMakePresets.json  build.py  configure.py
pmake-templates/common/!PROJECT!/: CMakeLists.txt
pmake-templates/common/!PROJECT!/include/!PROJECT!/: CMakeLists.txt
pmake-templates/common/!PROJECT!/source/: CMakeLists.txt
pmake-templates/common/cmake/: enable_vcpkg.cmake  remote_clone.cmake  static_analyzers.cmake
pmake-templates/common/cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
pmake-templates/features/installable/: install.py
pmake-templates/features/installable/cmake/: !PROJECT!Config.cmake
pmake-templates/features/testable/: runtests.py
pmake-templates/features/testable/cmake/: enable_tests.cmake
pmake-templates/features/testable/tests/: CMakeLists.txt
pmake-templates/features/testable/tests/example/: CMakeLists.txt  Main.cpp  example.cpp
pmake/include/pmake/: CMakeLists.txt  File.hpp  PMake.hpp  Project.hpp
pmake/include/pmake/files/: Files.hpp
pmake/include/pmake/files/preprocessor/: Preprocessor.hpp
pmake/include/pmake/filesystem/: Files.hpp
pmake/include/pmake/filesystem/preprocessor/: Preprocessor.hpp
pmake/include/pmake/preprocessor/: Interpreter.hpp  Lexer.hpp  Parser.hpp  Preprocessor.hpp
pmake/include/pmake/preprocessor/core/: Interpreter.hpp  Lexer.hpp  Parser.hpp  Token.hpp
pmake/include/pmake/preprocessor/core/nodes/: INode.hpp  IStatement.hpp
pmake/include/pmake/preprocessor/core/nodes/types/: ConditionalStatementNode.hpp  ContentNode.hpp  ExpressionNode.hpp  LiteralNode.hpp  OperatorNode.hpp  PrintNode.hpp  SelectionMatchStatementNode.hpp  SelectionStatementNode.hpp  UnconditionalStatementNode.hpp
pmake/include/pmake/preprocessor/nodes/: INode.hpp  IStatement.hpp
pmake/include/pmake/preprocessor/nodes/types/: ConditionalStatementNode.hpp  ContentNode.hpp  ExpressionNode.hpp  LiteralNode.hpp  OperatorNode.hpp  PrintNode.hpp  SelectionMatchStatementNode.hpp  SelectionStatementNode.hpp  UnconditionalStatementNode.hpp
pmake/include/pmake/program/: Context.hpp  Information.hpp
pmake/include/pmake/program/platform/: Linux.hpp  Windows.hpp
pmake/include/pmake/system/: Runtime.hpp
pmake/include/pmake/system/platform/: Linux.hpp  Windows.hpp
pmake/source/: CMakeLists.txt  File.cpp  Main.cpp  PMake.cpp  Project.cpp  main.cpp
pmake/source/files/: Files.cpp
pmake/source/files/preprocessor/: CMakeLists.txt  Preprocessor.cpp
pmake/source/filesystem/: CMakeLists.txt  Files.cpp
pmake/source/filesystem/preprocessor/: Preprocessor.cpp
pmake/source/preprocessor/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp  Preprocessor.cpp
pmake/source/preprocessor/core/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp
